--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
                     <img class="integrantes" src="https://img.freepik.com/vetores-premium/tela-de-carregamento-em-estilo-pixel-art_475147-2645.jpg" >
                     <h2 class="nome_integrantes">Joyce</h2>
                 </div>
+                <span></span>
                 <div class="pessoas">
                     <img class="integrantes" src="https://img.freepik.com/vetores-premium/tela-de-carregamento-em-estilo-pixel-art_475147-2645.jpg">
                     <h2 class="nome_integrantes">Fernada</h2>
                 </div>
+                <span></span>
                 <div class="pessoas">
                     <img class="integrantes" src="https://img.freepik.com/vetores-premium/tela-de-carregamento-em-estilo-pixel-art_475147-2645.jpg">
                     <h2 class="nome_integrantes">Greice</h2>
@@ -123,7 +125,7 @@
     <section id="localização" class="local_section">
         <h1 class="titulo_projetos">localização</h1>
         <div class="localização"> 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.8739177049497!2d2.3350637120842412!3d48.86061460043035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671d877937b0f%3A0xb975fcfa192f84d4!2sMuseu%20do%20Louvre!5e0!3m2!1spt-BR!2sbr!4v1713070407461!5m2!1spt-BR!2sbr" width="800" height="450"  loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe classe="local" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.8739177049497!2d2.3350637120842412!3d48.86061460043035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671d877937b0f%3A0xb975fcfa192f84d4!2sMuseu%20do%20Louvre!5e0!3m2!1spt-BR!2sbr!4v1713070407461!5m2!1spt-BR!2sbr" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
     <section id="contato">
