--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="botao_home">
-                <a onclick="scrollparaseccao('inicio')" ><img  src="https://cdn-icons-png.flaticon.com/128/4885/4885130.png" width="50px"></a>
+                <a onclick="scrollParaSeccao('inicio')" ><img  src="https://cdn-icons-png.flaticon.com/128/4885/4885130.png" width="50px"></a>
             </div>
         </section>
 
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="botao_home">
-                <a onclick="scrollparaseccao('inicio')" ><img  src="https://cdn-icons-png.flaticon.com/128/4885/4885130.png" width="50px"></a>
+                <a onclick="scrollParaSeccao('inicio')" ><img  src="https://cdn-icons-png.flaticon.com/128/4885/4885130.png" width="50px"></a>
             </div>
             
         </section>
